[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.40.1" , features = ["bundled", "functions"]}
rand = "0.10.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false