[package]
name = "rust_sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.40.1" , features = ["bundled", "functions", "backup"]}
rand = "0.10.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }
bincode = "1.3.3"
rmp-serde = "1.3.1"
rusqlite_migration = "2.6.0"
anyhow = "1.0.103"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false